# load-forecast-cali

./: .gitignore  README.md  caiso_features.csv  pyproject.toml
data/processed/: caiso_final_dataset.csv  caiso_load_complete.csv
models/: xgb.py
setupdata/: addholidays.py  lagfeatures.py  loadandclean.py  scraper.py  vis.py  weatherdata.py
src/: __main__.py  cli.py  data.py  features.py  model.py  weather.py
src/load_forecasting_cali/: __init__.py  __main__.py  cli.py  model.py
tests/: test_cli.py  test_data.py  test_features.py  test_model.py  test_model_validation.py  test_pipeline.py  test_tuning.py  test_weather.py
