[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "load-forecasting-cali"
version = "0.1.0"
description = "CAISO hourly load forecasting pipeline with feature engineering and XGBoost."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ORIE 5270 Team" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "matplotlib>=3.7",
  "holidays>=0.38",
  "meteostat>=1.6",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
load-forecast = "load_forecasting_cali.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=load_forecasting_cali --cov-report=term-missing"
