[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "load-forecasting-cali"
version = "0.1.0"
description = "CAISO hourly load forecasting pipeline with feature engineering and XGBoost."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ORIE 5270 Team" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "matplotlib>=3.7",
  "holidays>=0.38",
  "meteostat>=1.6",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
scraper = [
  "requests>=2.28",
  "beautifulsoup4>=4.12",
]

[project.scripts]
load-forecast = "load_forecasting_cali.cli:main"

[tool.setuptools]
package-dir = {"load_forecasting_cali" = "src"}
packages = ["load_forecasting_cali"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=load_forecasting_cali --cov-report=term-missing"
